Random attempt at Jack's website

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # The URL the site will be built for
 base_url = "https://particle.vercel.app"
 
-title = "A blog about lorem ipsum dolor sit amet"
+title = "Jack's blog"
 description = "A blog about lorem ipsum dolor sit amet"
 
 # Whether to automatically compile all Sass files in the sass directory
@@ -19,12 +19,12 @@ default_language = "en"
 
 [extra]
 # User settings
-username = "Anon Developer"
-user_description = "Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS."
+username = "Jack Pant's"
+user_description = "Code, Sculpting, Game Design, and everything inbetween"
 user_title = "Software Developer"
 email = "anon@anon.com"
 twitter_username = "lorem_ipsum"
-github_username =  "lorem_ipsum"
+github_username =  "thelazyone"
 gplus_username =  "lorem_ipsum"
 
 # Google-analytics
