--- a/theme.toml
+++ b/theme.toml
@@ -10,7 +10,7 @@ name = "Silvano Sallese"
 homepage = "https://svavs.github.io/"
 
 [original]
-author =  "Anon Developer"
+author =  "Giacomo Pantalone"
 homepage = "https://nrandecker.github.io/particle/"
 repo = "https://github.com/nrandecker/particle" 
 
