--- a/config.toml
+++ b/config.toml
@@ -25,13 +25,11 @@ taxonomies = [
 
 [extra]
 # User settings
-username = "Jack's Den"
+username = "Giacomo Pantalone"
 user_description = "Code, Sculpting, Game Design, and everything inbetween"
 user_title = "Coding Creative"
 email = "anon@anon.com"
-twitter_username = "lorem_ipsum"
 github_username =  "thelazyone"
-gplus_username =  "lorem_ipsum"
 
 # For the blog
 accent = "#05a081"
