--- a/theme.toml
+++ b/theme.toml
@@ -1,18 +1,1 @@
-name = "particle"
-description = "Particle theme for Zola"
-license = "MIT"
-homepage = "https://github.com/svavs/particle"
-min_version = "0.11.0"
-demo = "https://particle-zola.vercel.app/"
-
-[author]
-name = "Silvano Sallese"
-homepage = "https://svavs.github.io/"
-
-[original]
-author =  "Giacomo Pantalone"
-homepage = "https://nrandecker.github.io/particle/"
-repo = "https://github.com/nrandecker/particle" 
-
-[extra]
-
+name = "bacter-particle-zola"
